IMOD History
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
5/1/15: In eTomo - Tomogram Combination, automatically filling in Z min/max
when "Use automatic patch fitting" is selected.(Bug# 1878)

5/1/15: In eTomo - Fine Alignment, Added a global XTilt option.(Bug# 1793)

5/1/15: In eTomo - Tomogram Combination, converted matchorwarp parameters to
PIP.(Bug# 1866)

5/1/15: In eTomo - Tomogram Combination, added controls for dualvolmatch.
(Bug# 1865)

4/30/15: Added an option to Tilt to get a thresholded reprojection of fixed
values for pixels beyond a threshold.

4/30/15: Added -M option to Clip to do thresholding with a minimum size in 2D
or 3D for regions beyond the threshold on one side.

4/25/15: IMOD_4-7-15
4/24/15: In eTomo - Join fixed the trial join and rejoin "use every" spinners.
(Bug# 1868)

4/23/15: In eTomo - Tomogram Combination, setting InvertYLimits in
corrsearch3d when the origcoms is present.  This mitigates a problem caused
by the change from flipping to rotation in 3dmod (In 4.7).(Bug# 1874)

4/13/15: Added option to Tiltalign to allow grouping of tilt angles across
separate view groups and put option in master com file to do this for a patch
tracking model. 

4/13/15: Added option to set fallback thresholds for Findbeads3d.

4/10/15: Made Batchruntomo apply directives for options in golderaser.com 
(In 4.7).

4/9/15: IMOD_4-8-30
4/9/15: Added options to Findbeads3d to allow a subvolume to be analyzed and
started taking the square root of peak strength for analysis and display.

4/9/15: Fixed Corrsearch3d so that Z slice limits picked in etomo will specify
the proper Y range in the unrotated volume (In 4.7).

4/9/15: Fixed Batchruntomo to scale fine alignment shifts by the prealign
binning when combining with the prealign shifts (In 4.7).

4/7/15: In eTomo - Tomogram Combination, changes to handle a combine done by
batchruntomo and to allow automatic patch fitting to be done through the 
interface.(Bug# 1826)
