@@ -1,5 +1,12 @@
 IMOD History
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+5/3/15: Added RMS value to standard Fortran header output if it was apparently
+computed and added -rms option to Header program.  Started initializing RMS as
+-1 to conform to new 2014 MRC standard and added support for the MRC version
+number.
+
+5/2/15: Added more 3dmod messages for setting object properties.
+
 5/1/15: In eTomo - Tomogram Combination, automatically filling in Z min/max
 when "Use automatic patch fitting" is selected.(Bug# 1878)
 
